test/integration/bad/new/bad_constrained_type_in_local.stan
transformed data {
  array[3] simplex[2] x;
  {
    array[3] simplex[2] y = x;
    print(y);
  }
}
